--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "npm": "6.14.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.6",
+    "web3-utils": "^1.2.7"
   }
 }
