--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm": "6.14.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
     "web3-utils": "^1.2.7"
