--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
+    "web3-eth-accounts": "^1.2.7",
     "web3-utils": "^1.2.7"
   },
   "devDependencies": {
