--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
     "web3-eth-accounts": "^1.2.7",
-    "web3-utils": "^1.2.7"
+    "web3-utils": "^1.2.7",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "mocha": "^7.1.2",
-    "chai": "^4.2.0",
-    "node-fetch": "^2.6.0"
+    "chai": "^4.2.0"
   }
 }
