--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "url": "git+https://github.com/coinosis/owl.git"
   },
   "scripts": {
-    "start": "./start.sh",
-    "start:dev": "mongod --dbpath=db & nodemon server.js",
+    "start": "node ./server.js",
+    "start:dev": "mongod --dbpath=db & nodemon ./server.js",
     "test": "./test.sh"
   },
   "author": "@e18r",
