--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
-    "web3-eth-accounts": "^1.2.7",
-    "web3-utils": "^1.2.7",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "web3": "^1.2.8"
   },
   "devDependencies": {
     "mocha": "^7.1.2",
