--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "testing": {
     "id": "testing",
-    "payUReports": "https://sandbox.api.payulatam.com/reports-api/4.0/service.cgi",
+    "payUReports": "https://api.payulatam.com/reports-api/4.0/service.cgi",
     "etherscanKey": "K33HJVG46X7392MMEVXXYCFERNVK77I13T"
   },
   "production": {
