--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
     "node-fetch": "^2.6.0",
