added the contract module to server.js
* added the private key in the start:dev command
* added the private key in the test command
* updated the documentation

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "node ./server.js",
-    "start:dev": "mongod --dbpath=db & nodemon ./server.js",
+    "start:dev": "./start.dev.sh",
     "test": "./test.sh"
   },
   "author": "@e18r",
