--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "web3": "^1.2.8"
   },
   "devDependencies": {
-    "mocha": "^7.1.2",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "ethereumjs-util": "^7.0.2",
+    "mocha": "^7.1.2"
   }
 }
