--- a/settings.json
+++ b/settings.json
@@ -9,7 +9,7 @@
   },
   "unit": {
     "environmentId": "unit",
-    "payUReports": "https://sandbox.api.payulatam.com/reports-api/4.0/service.cgi",
+    "payUReports": "http://localhost:9470",
     "etherscanKey": "2RU78DJDPVG9G2VK3AHE8QVTAN65CP9MBI",
     "web3Provider": "http://localhost:8555",
     "chain": "ropsten",
