--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "ethereumjs-util": "^7.0.2",
+    "greadme": "^1.0.0",
     "mocha": "^7.1.2"
   }
 }
