--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
     "node-fetch": "^2.6.0",
-    "web3": "^1.2.8"
+    "web3": "^1.2.8",
+    "ethereumjs-util": "^7.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "ethereumjs-util": "^7.0.2",
     "greadme": "^1.0.0",
     "mocha": "^7.1.2"
   }
