--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,8 @@
     "etherscanKey": "2RU78DJDPVG9G2VK3AHE8QVTAN65CP9MBI",
     "web3Provider": "http://localhost:8545",
     "chain": "ropsten",
-    "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A"
+    "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
+    "merchantId": 508029
   },
   "unit": {
     "environmentId": "unit",
@@ -13,7 +14,8 @@
     "etherscanKey": "2RU78DJDPVG9G2VK3AHE8QVTAN65CP9MBI",
     "web3Provider": "http://localhost:8555",
     "chain": "ropsten",
-    "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A"
+    "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
+    "merchantId": 508029
   },
   "testing": {
     "environmentId": "testing",
@@ -21,7 +23,8 @@
     "etherscanKey": "K33HJVG46X7392MMEVXXYCFERNVK77I13T",
     "web3Provider": "https://ropsten.infura.io/v3/58a2b59a8caa4c2e9834f8c3dd228b06",
     "chain": "ropsten",
-    "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A"
+    "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
+    "merchantId": 508029
   },
   "production": {
     "environmentId": "",
@@ -29,6 +32,7 @@
     "etherscanKey": "NAVRNVJWI4D72RX8Z5C5FAHZ8BCNC1DCVN",
     "web3Provider": "https://mainnet.infura.io/v3/58a2b59a8caa4c2e9834f8c3dd228b06",
     "chain": "mainnet",
-    "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A"
+    "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
+    "merchantId": 845239
   }
 }
