checkFee function in payu + test

--- a/settings.json
+++ b/settings.json
@@ -6,7 +6,8 @@
     "web3Provider": "http://localhost:8545",
     "chain": "ropsten",
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
-    "merchantId": 508029
+    "merchantId": 508029,
+    "feeThreshold": 0.9
   },
   "unit": {
     "environmentId": "unit",
@@ -15,7 +16,8 @@
     "web3Provider": "http://localhost:8555",
     "chain": "ropsten",
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
-    "merchantId": 508029
+    "merchantId": 508029,
+    "feeThreshold": 0.9
   },
   "testing": {
     "environmentId": "testing",
@@ -24,7 +26,8 @@
     "web3Provider": "https://ropsten.infura.io/v3/58a2b59a8caa4c2e9834f8c3dd228b06",
     "chain": "ropsten",
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
-    "merchantId": 508029
+    "merchantId": 508029,
+    "feeThreshold": 0.9
   },
   "production": {
     "environmentId": "",
@@ -33,6 +36,7 @@
     "web3Provider": "https://mainnet.infura.io/v3/58a2b59a8caa4c2e9834f8c3dd228b06",
     "chain": "mainnet",
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
-    "merchantId": 845239
+    "merchantId": 845239,
+    "feeThreshold": 0.9
   }
 }
