configured eslint and corrected eslint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "env": {
-        "browser": true,
+        "node": true,
         "commonjs": true,
         "es2020": true
     },
@@ -9,5 +9,6 @@
         "ecmaVersion": 11
     },
     "rules": {
+      "no-constant-condition": [ "error", { "checkLoops": false }]
     }
 }
