--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
     "env": {
         "node": true,
-        "commonjs": true,
-        "es2020": true
+        "commonjs": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
