--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-util": "^7.0.2",
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
     "node-fetch": "^2.6.0",
-    "web3": "^1.2.8",
-    "ethereumjs-util": "^7.0.2"
+    "web3": "^1.2.8"
   },
   "devDependencies": {
     "chai": "^4.2.0",
