allow owl to interact with to custom networks
* use chainId instead of chain name in settings
* change settings to POA Sokol and xDAI
* use custom chain in ethereumjs

--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
     "environmentId": "development",
     "payUReports": "https://sandbox.api.payulatam.com/reports-api/4.0/service.cgi",
     "etherscanKey": "2RU78DJDPVG9G2VK3AHE8QVTAN65CP9MBI",
-    "web3Provider": "http://localhost:8545",
-    "chain": "ropsten",
+    "web3Provider": "https://sokol.poa.network",
+    "chainId": 77,
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
     "merchantId": 508029,
     "feeThreshold": 0.9,
@@ -16,7 +16,7 @@
     "payUReports": "http://localhost:9470",
     "etherscanKey": "2RU78DJDPVG9G2VK3AHE8QVTAN65CP9MBI",
     "web3Provider": "http://localhost:8555",
-    "chain": "ropsten",
+    "chainId": 77,
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
     "merchantId": 508029,
     "feeThreshold": 0.9,
@@ -27,8 +27,8 @@
     "environmentId": "testing",
     "payUReports": "https://sandbox.api.payulatam.com/reports-api/4.0/service.cgi",
     "etherscanKey": "K33HJVG46X7392MMEVXXYCFERNVK77I13T",
-    "web3Provider": "https://ropsten.infura.io/v3/58a2b59a8caa4c2e9834f8c3dd228b06",
-    "chain": "ropsten",
+    "web3Provider": "https://sokol.poa.network",
+    "chainId": 77,
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
     "merchantId": 508029,
     "feeThreshold": 0.9,
@@ -39,8 +39,8 @@
     "environmentId": "staging",
     "payUReports": "https://api.payulatam.com/reports-api/4.0/service.cgi",
     "etherscanKey": "K33HJVG46X7392MMEVXXYCFERNVK77I13T",
-    "web3Provider": "https://ropsten.infura.io/v3/58a2b59a8caa4c2e9834f8c3dd228b06",
-    "chain": "ropsten",
+    "web3Provider": "https://xdai.poanetwork.dev",
+    "chainId": 100,
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
     "merchantId": 845239,
     "feeThreshold": 0.9,
@@ -51,8 +51,8 @@
     "environmentId": "",
     "payUReports": "https://api.payulatam.com/reports-api/4.0/service.cgi",
     "etherscanKey": "NAVRNVJWI4D72RX8Z5C5FAHZ8BCNC1DCVN",
-    "web3Provider": "https://mainnet.infura.io/v3/58a2b59a8caa4c2e9834f8c3dd228b06",
-    "chain": "mainnet",
+    "web3Provider": "https://xdai.poanetwork.dev",
+    "chainId": 100,
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
     "merchantId": 845239,
     "feeThreshold": 0.9,
