--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
     "environmentId": "development",
     "payUReports": "https://sandbox.api.payulatam.com/reports-api/4.0/service.cgi",
     "etherscanKey": "2RU78DJDPVG9G2VK3AHE8QVTAN65CP9MBI",
-    "web3Provider": "https://sokol.poa.network",
-    "chainId": 77,
+    "web3Provider": "http://localhost:8545",
+    "chainId": 1337,
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
     "merchantId": 508029,
     "feeThreshold": 0.9,
@@ -16,7 +16,7 @@
     "payUReports": "http://localhost:9470",
     "etherscanKey": "2RU78DJDPVG9G2VK3AHE8QVTAN65CP9MBI",
     "web3Provider": "http://localhost:8555",
-    "chainId": 77,
+    "chainId": 1337,
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
     "merchantId": 508029,
     "feeThreshold": 0.9,
