use sokol in staging

--- a/settings.json
+++ b/settings.json
@@ -39,8 +39,8 @@
     "environmentId": "staging",
     "payUReports": "https://api.payulatam.com/reports-api/4.0/service.cgi",
     "etherscanKey": "K33HJVG46X7392MMEVXXYCFERNVK77I13T",
-    "web3Provider": "https://xdai.poanetwork.dev",
-    "chainId": 100,
+    "web3Provider": "https://sokol.poa.network",
+    "chainId": 77,
     "account": "0x9fCA45d4fF08e62B3084a68353BE55bD905c961A",
     "merchantId": 845239,
     "feeThreshold": 0.9,
