paypal's production api endpoints

--- a/settings.json
+++ b/settings.json
@@ -77,6 +77,10 @@
       "tokenEndpoint": "https://accounts.google.com/o/oauth2/token",
       "broadcastEndpoint": "https://www.googleapis.com/youtube/v3/liveBroadcasts",
       "streamEndpoint": "https://www.googleapis.com/youtube/v3/liveStreams"
+    },
+    "paypal": {
+      "tokenEndpoint": "https://api.paypal.com/v1/oauth2/token",
+      "ordersEndpoint": "https://api.paypal.com/v2/checkout/orders"
     }
   },
   "production": {
@@ -94,6 +98,10 @@
       "tokenEndpoint": "https://accounts.google.com/o/oauth2/token",
       "broadcastEndpoint": "https://www.googleapis.com/youtube/v3/liveBroadcasts",
       "streamEndpoint": "https://www.googleapis.com/youtube/v3/liveStreams"
+    },
+    "paypal": {
+      "tokenEndpoint": "https://api.paypal.com/v1/oauth2/token",
+      "ordersEndpoint": "https://api.paypal.com/v2/checkout/orders"
     }
   }
 }
